tests/fixtures/invalid/noexist_module.py
import _noexist_module_

print(1)